# fo-dicom

./: .editorconfig  .gitattributes  .gitignore  ChangeLog.md  ChangeLog5.md  Contributors.md  Create Distribution Package.bat  DICOM.Desktop.sln  DICOM.Full.VC.db  DICOM.Full.sln  DICOM.Mono.sln  DICOM.Unity.sln  DICOM.sln  Directory.Build.props  FO-DICOM.Core.editorconfig.bak  FO-DICOM.Full.sln  FO-DICOM.Full.sln.DotSettings  License.txt  Portable.DICOM.sln  README.md  READMENuget.md  SharedAssemblyInfo.cs  Todo.md  Touch.DICOM.sln  appveyor.yml  azure-pipelines.yml  codecov.yml  coverlet.runsettings  fo-dicom.nuspec  fo-dicom.targets  global.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
C-Find SCP/: C-Find SCP.csproj  FindSCP.cs  Program.cs
C-Find SCU/: C-Find SCU.csproj  Program.cs
C-Store SCU/: C-Store SCU.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
ConsoleApp1/: ConsoleApp1.csproj  Program.cs
ConsoleTest/: ConsoleTest.csproj  Program.cs  packages.config
DICOM/: APMHelper.cs  AsyncFactory.cs  DICOM.Core.csproj  DICOM.Legacy.csproj  DICOM.Shared.projitems  DICOM.Shared.shproj  DICOM.Universal.Shared.projitems  DICOM.Universal.Shared.shproj  DICOM.csproj  DatabaseQueryTransformRule.cs  DesktopManagers.cs  DicomAnonymizer.cs  DicomAnonymizerGenerated.cs  DicomAnonymizerGenerated.tt  DicomDataException.cs  DicomDataset.cs  DicomDatasetExtensions.cs  DicomDatasetGetValueMethods.cs  DicomDatasetWalker.cs  DicomDatasetWalkerExtensions.cs  DicomDateRange.cs  DicomDictionary.cs  DicomDictionaryEntry.cs  DicomDictionaryGenerated.cs  DicomDictionaryReader.cs  DicomDirectory.cs  DicomDirectoryRecord.cs  DicomDirectoryRecordCollection.cs  DicomDirectoryRecordType.cs  DicomElement.cs  DicomEncoding.Desktop.cs  DicomEncoding.Portable.cs  DicomEncoding.cs  (+51 more)
DICOM [Native]/: AssemblyInfo.cpp  Dicom.Imaging.Codec.Jpeg.cpp  Dicom.Imaging.Codec.Jpeg.h  Dicom.Imaging.Codec.Jpeg.i  Dicom.Imaging.Codec.Jpeg2000.cpp  Dicom.Imaging.Codec.Jpeg2000.h  Dicom.Imaging.Codec.JpegLS.cpp  Dicom.Imaging.Codec.JpegLS.h  Dicom.Imaging.Codec.Jpeg_12.cpp  Dicom.Imaging.Codec.Jpeg_16.cpp  Dicom.Imaging.Codec.Jpeg_8.cpp  Dicom.Imaging.Codec.Rle.cpp  Dicom.Imaging.Codec.Rle.h  DicomNativeExt.cpp
DICOM [Unit Tests]/: App.config  BulkDataUriTest.cs  DICOM [Unit Tests].csproj  DICOM.Tests.csproj  DicomDatasetTest.cs  DicomDatasetWalkerTest.cs  DicomDictionaryTest.cs  DicomElementTest.cs  DicomEncodingTest.cs  DicomFileTest.cs  DicomOtherByteTest.cs  DicomPersonNameTest.cs  DicomTagTest.cs  DicomTagTests.cs  DicomUIDGeneratorTest.cs  DicomUIDTest.cs  DicomVMTest.cs  DicomVRTest.cs  GeneralFixture.cs  JsonDicomConverterTest.cs  SetupFixture.cs  packages.config  test.proj  test.txt
DICOM.Android/: DICOM.Android.csproj
DICOM.Core/: DICOM.Core.csproj
DICOM.Desktop/: DICOM.Desktop.csproj  DesktopManagers.cs
DICOM.Mono/: DICOM.Mono.csproj
DICOM.Native/: AssemblyInfo.cpp  Dicom.Imaging.Codec.Jpeg.cpp  Dicom.Imaging.Codec.Jpeg.h  Dicom.Imaging.Codec.Jpeg.i  Dicom.Imaging.Codec.Jpeg2000.cpp  Dicom.Imaging.Codec.Jpeg2000.h  Dicom.Imaging.Codec.JpegLS.cpp  Dicom.Imaging.Codec.JpegLS.h  Dicom.Imaging.Codec.Jpeg_12.cpp  Dicom.Imaging.Codec.Jpeg_16.cpp  Dicom.Imaging.Codec.Jpeg_8.cpp  Dicom.Imaging.Codec.Rle.cpp  Dicom.Imaging.Codec.Rle.h  DicomNativeExt.cpp
DICOM.Native.Linux/: .gitignore  CMakeLists.txt  Makefile  Readme.md  Readme.txt  cmake_install.cmake
DICOM.Native.Linux/CharLS/: CMakeCache.txt  CMakeLists.txt  JpegStream.cd  Makefile  Strategy.cd  charls.def  charls.rc  cmake_install.cmake  colortransform.h  context.h  contextrunmode.h  decoderstrategy.h  defaulttraits.h  encoderstrategy.h  interface.cpp  jpegls.cpp  jpegmarkersegment.cpp  jpegmarkersegment.h  jpegstreamreader.cpp  jpegstreamwriter.h  losslesstraits.h  processline.h  publictypes.h  scan.h  util.h
DICOM.Native.Linux/OpenJPEG/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  j2k.c  opj_config.h  opj_config_private.h  thread.c
DICOM.Native.Linux/libijg12/: CMakeLists.txt  Makefile  Makefile.dep  Makefile.in  cmake_install.cmake  jcarith.c  jccoefct.c  jccolor.c  jcdiffct.c  jchuff.c  jclhuff.c  jcmainct.c  jcmaster.c  jconfig12.h  jcphuff.c  jcpred.c  jcprepct.c  jcshuff.c  jctrans.c  jdapistd.c  jdarith.c  jdcoefct.c  jdcolor.c  jdhuff12.h  jdlhuff.c  jdmainct.c  jdmarker.c  jdmerge.c  jdphuff.c  jdpostct.c  jdpred.c  jdshuff.c  jerror.c  jerror12.h  jmemmgr.c  jmemnobs.c  jmorecfg12.h  jquant1.c  jquant2.c
DICOM.Native.Linux/libijg16/: CMakeLists.txt  Makefile  Makefile.dep  Makefile.in  cmake_install.cmake  jcapistd.c  jccoefct.c  jcdiffct.c  jchuff.c  jclhuff.c  jclossy.c  jcmainct.c  jcmaster.c  jconfig16.h  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jctrans.c  jdapistd.c  jdarith.c  jdcoefct.c  jddiffct.c  jdhuff16.h  jdlhuff.c  jdmarker.c  jdmerge.c  jdpostct.c  jdpred.c  jdshuff.c  jdtrans.c  jerror.c  jmorecfg16.h  jquant1.c  jquant2.c  osconfig.h
DICOM.Native.Linux/libijg8/: CMakeLists.txt  Makefile  Makefile.dep  Makefile.in  cmake_install.cmake  jaricom.c  jcapimin.c  jcapistd.c  jccoefct.c  jcdctmgr.c  jcdiffct.c  jchuff.c  jcinit.c  jcmainct.c  jcmaster.c  jconfig8.h  jcparam.c  jcphuff.c  jcpred.c  jcprepct.c  jcsample.c  jctrans.c  jdarith.c  jdatasrc.c  jdcoefct.c  jddiffct.c  jdhuff.c  jdlhuff.c  jdmainct.c  jdmarker.c  jdphuff.c  jdpostct.c  jdsample.c  jdshuff.c  jdtrans.c  jerror.c  jidctflt.c  jidctint.c  jinclude8.h  jmemmgr.c  (+5 more)
DICOM.Phone/: DICOM.Phone.csproj  packages.config
DICOM.Tests/: DICOM.Tests.csproj  DicomDatasetAddTest.cs  DicomDatasetTest.cs  DicomDatasetWalkerTest.cs  DicomDateRangeTest.cs  DicomDateRangeTests.cs  DicomDateTimeTest.cs  DicomDictionaryTest.cs  DicomElementTest.cs  DicomEncodingTest.cs  DicomFileMetaInformationTests.cs  DicomFileTest.cs  DicomOtherByteTest.cs  DicomParseableTest.cs  DicomPersonNameTest.cs  DicomTagTest.cs  DicomUIDTest.cs  DicomVMTest.cs  DicomVRTest.cs  SetupFixture.cs  TestOutputHelperLogger.cs  packages.config
DICOM.Windows/: DICOM.Windows.csproj
DICOM.iOS/: DICOM.iOS.csproj
(+2731 files in other folders)
